force-app/main/default/objects/Case/fields/Agent_Account__c.field-meta.xml
<CustomField>
    <fullName>Agent_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Agent Account)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>