force-app/main/default/objects/Case/fields/Agent_User__c.field-meta.xml
<CustomField>
    <fullName>Agent_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>