force-app/main/default/objects/Case/fields/Is_case_owner__c.field-meta.xml
<CustomField>
    <fullName>Is_case_owner__c</fullName>
    <formula>Owner:User.Id  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is case owner</label>
    <type>Checkbox</type>
</CustomField>