force-app/main/default/objects/Case/listViews/All_cases.listView-meta.xml
<ListView>
    <fullName>All_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>All cases</label>
    <sharedTo>
        <role>CEO</role>
        <roleAndSubordinates>Call_Center_Agent</roleAndSubordinates>
        <roleAndSubordinates>Manager</roleAndSubordinates>
    </sharedTo>
</ListView>