force-app/main/default/objects/Case/listViews/All_Escalated_Cases.listView-meta.xml
<ListView>
    <fullName>All_Escalated_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Escalated</value>
    </filters>
    <label>All Escalated Cases</label>
    <sharedTo>
        <role>CEO</role>
        <role>Call_Center_Agent</role>
        <role>Manager</role>
    </sharedTo>
</ListView>