force-app/main/default/objects/Case/listViews/Case_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Case_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Case Queue From Email</label>
    <queue>Case_Queue_From_Email</queue>
    <sharedTo>
        <role>Call_Center_Agent</role>
    </sharedTo>
</ListView>