force-app/main/default/objects/Case/listViews/Case_Queue_From_Phone_Case.listView-meta.xml
<ListView>
    <fullName>Case_Queue_From_Phone_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Queue From Phone</label>
    <queue>Case_Queue_From_Phone</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>