force-app/main/default/objects/Case/listViews/Filter_by_Priority.listView-meta.xml
<ListView>
    <fullName>Filter_by_Priority</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.PRIORITY</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <label>Filter by High Priority</label>
    <sharedTo>
        <role>CEO</role>
        <role>Call_Center_Agent</role>
        <role>Manager</role>
    </sharedTo>
</ListView>